# kubi-zone

./: Cargo.toml  Dockerfile  README.md  justfile
.github/: codecov.yml
.github/workflows/: check.yml  test.yml
controllers/kubizone/: CHANGELOG.md  Cargo.toml
controllers/kubizone/src/: ingress.rs  lib.rs  main.rs  record.rs  zone.rs
controllers/kubizone/tests/: cross_namespace_adoption.rs  limited_adoption.rs  longest_matching.rs  orphaned_record.rs  record_adoption.rs  record_delegation_withdrawn.rs  split_namespace_delegation.rs
controllers/kubizone/tests/common/: mod.rs
crates/crd-exporter/: Cargo.toml  README.md
crates/crd-exporter/src/: main.rs
crates/kubizone-common/: CHANGELOG.md  Cargo.toml
crates/kubizone-common/src/: dn.rs  fqdn.rs  lib.rs  pattern.rs  pqdn.rs  type.rs
crates/kubizone-crds/: CHANGELOG.md  Cargo.toml  LICENSE
crates/kubizone-crds/src/: lib.rs
crates/kubizone-crds/src/v1alpha1/: zone.rs
crates/zonefile-crds/: CHANGELOG.md  Cargo.toml
crates/zonefile-crds/src/: dump.rs  lib.rs
crates/zonefile-crds/src/v1alpha1/: mod.rs  zonefile.rs
crds/kubi.zone/v1alpha1/: Record.yaml  Zone.yaml  ZoneFile.yaml
