[workspace]
resolver = "2"
members = ["crates/kubizone-common", "crates/kubizone-crds"]

[workspace.dependencies]
kubizone-common = { version = "0.15.0", path = "crates/kubizone-common" }

# Logging
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization/Deserialization
schemars = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
serde_json = { version = "1" }

# Kubernetes
kube = { version = "1.1.0", default-features = false, features = [
    "derive",
    "rustls-tls",
    "client",
    "runtime",
] }
k8s-openapi = { version = "0.25.0" }
