[workspace]
resolver = "2"
members = [
    "crates/kubizone-common",
    "crates/kubizone-crds",
    "crates/zonefile-crds",
]

[workspace.dependencies]
kubizone-common = { version = "0.15.0", path = "crates/kubizone-common" }
kubizone-crds = { version = "0.14.0", path = "crates/kubizone-crds" }
zonefile-crds = { version = "0.5.0", path = "crates/kubizone-crds" }

# Logging
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Serialization/Deserialization
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
serde_json = { version = "1.0.140" }

# Kubernetes
kube = { version = "1.1.0", default-features = false, features = [
    "derive",
    "rustls-tls",
    "client",
    "runtime",
] }
k8s-openapi = { version = "0.25.0" }
