[workspace]
resolver = "2"
members = [
    "crates/kubizone-common",
    "crates/kubizone-crds",
    "crates/zonefile-crds",
    "crates/crd-exporter",
    "controllers/kubizone",
]

[workspace.dependencies]
kubizone-common = { version = "0.15.0", path = "crates/kubizone-common", default-features = false }
kubizone-crds = { version = "0.14.0", path = "crates/kubizone-crds", default-features = false }
zonefile-crds = { version = "0.5.0", path = "crates/zonefile-crds", default-features = false }

# Logging
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Serialization/Deserialization
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
serde_json = { version = "1.0.140" }
regex = { version = "1.11.1" }
json-patch = { version = "4.0.0" }
jsonptr = { version = "0.7.1" }

# Kubernetes
kube = { version = "1.1.0", default-features = false }
k8s-openapi = { version = "0.25.0", default-features = false }

# Async
tokio = { version = "1.45.1", features = ["macros", "rt"] }
futures = "0.3.31"

# CLI
clap = { version = "4.4" }

# Utilities
time = "0.3.41"
indoc = "2.0.5"
serial_test = "3.1.1"
