[package]
name = "zonefile-crds"
version = "0.5.0"
edition = "2024"
rust-version = "1.85.1"

authors = ["Mathias Pius Stage <contact@pius.email>"]
description = "Rust library exposing the Zonefile CRDs as types."
keywords = ["kubernetes", "kubizone", "crd", "zonefile"]

repository = "https://github.com/kubi-zone/kubi-zone"
license = "MIT"
readme = "README.md"

[dependencies]
kubizone-crds.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
kube = { workspace = true, features = ["derive"] }
k8s-openapi.workspace = true

[features]
default = ["v1_33"]
# k8s-openapi equivalents are enabled transitively.
v1_30 = ["kubizone-crds/v1_30"]
v1_31 = ["kubizone-crds/v1_31"]
v1_32 = ["kubizone-crds/v1_32"]
v1_33 = ["kubizone-crds/v1_33"]

# When enabled, the custom resource definitions will be placed in the dev.kubi.zone
# group, instead of the actual kubi.zone group. This way you can have the production
# and dev versions of kubizone resources running side by side, without interfering
# with each other.
dev = ["kubizone-crds/dev"]
